--- a/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
+++ b/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
@@ -8,9 +8,9 @@ HydrotopeInputIndexer.0=%d von %d - %s
 NetElement.4=Unterwasserknoten f\u00FCr Strang '%s' nicht definiert
 NetElement.3=Fehler beim Schreiben einer Zeitreihe f\u00FCr Teilgebiet '%s' (%s)
 NAModelPreprocessor.6=Wende Kalibrierungsfaktoren an...
-NAModelPreprocessor.5=Fehler beim Entzippen der Vorprozessierten ASCII Dateien
+NAModelPreprocessor.5=Fehler beim Entpacken der Vorprozessierten ASCII Dateien
 NAModelPreprocessor.4=Fehler beim Schreiben der Kalypso-NA ASCII Anfangswerte\: %s
-NAModelPreprocessor.3=Fehler beim Kopieren der vorprozessierten ASCII Dateien
+NAModelPreprocessor.3=Fehler beim Kopieren der Vorprozessierten ASCII Dateien
 NAModelPreprocessor.2=Schreibe Steuerdatei f\u00FCr Kalypso-NA
 NAModelPreprocessor.1=Virtuell Str\u00E4nge werden hinzugef\u00FCgt
 NAModelPreprocessor.0=Unerwarteter Fehler beim Erzeugen der Kalypso-NA ASCII Dateien
@@ -25,28 +25,28 @@ HydrotopeValidator_8=Teileinzugsgebiet-Abdeckung
 HydrotopeValidator_7=Fl\u00E4che des Teileinzugsgebiet '%s' ist geringer als die Gesamtfl\u00E4che seiner Hydrotope (Unterschied %.1f %%).
 HydrotopeValidator_6=Abdeckung durch Hydrotope unzureichend f\u00FCr Teileinzugsgebiet '%s' (Unterschied %.1f %%).
 HydrotopeValidator_5=Keine Abdeckung durch ein Hydrotop f\u00FCr Teileinzugsgebiet '%s' .
-HydrotopeValidator_4=Indiziere Hydrotopye
+HydrotopeValidator_4=Indiziere Hydrotope
 HydrotopeValidator_3=\u00DCberpr\u00FCfe Abdeckung der Teileinzugsgebiete
 HydrotopeValidator_2=Hydrotope
 HydrotopeValidator_1=Erzeuge Index
 HydrotopeValidator_0=\u00DCberpr\u00FCfe Hydrotope
 NAOptimizingJob_5=Unerwarteter Fehler w\u00E4hrend der Simulation
 LinearSumGenerator_3=Erzeuge Zeitreihe %d zu Gebiet '%s' mit %d gewichteten Zeitreihen...
-NAOptimizingJob_4=Simulation durch Abbruch beeendet
+NAOptimizingJob_4=Simulation durch Abbruch beendet
 LinearSumGenerator_2=Sammle gewichtete Zeitreihen zur Erzeugung von Zeitreihe %d zu Gebiet '%s'...
 NAOptimizingJob_3=Lade Eingangsdaten\u2026
 LinearSumGenerator_1=Generiere Zeitreihen...
 LinearSumGenerator_0=Generiere Zeitreihen f\u00FCr %d Gebiete...
 org.kalypso.convert.namodel.hydrotope.TopologyChecker.0=Problematische Topologie bei Feature %s\:
-org.kalypso.convert.namodel.manager.NetFileManager.11=Netzdatei\: Kennziffer Zu- oder Abgabekennlinie izuf\= %d wird nicht unterstuetzt. Unterstuetzt werden izuf\=0 und izuf\=5.
-org.kalypso.convert.namodel.manager.NetFileManager.10=Netzdatei\: iueb>0 wird nicht unterstuetzt
+org.kalypso.convert.namodel.manager.NetFileManager.11=Netzdatei\: Kennziffer Zu- oder Abgabekennlinie izuf\= %d wird nicht unterstützt. Unterstützt werden izuf\=0 und izuf\=5.
+org.kalypso.convert.namodel.manager.NetFileManager.10=Netzdatei\: iueb>0 wird nicht unterstützt
 RrmSimulation.3=Zufluss
 RrmSimulation.2=Pegel
 RrmSimulation.1=Niederschlag
 RrmSimulation.0=Klima
 HydroHash_0=Kein Hydrotop f\u00FCr Teileinzugsgebiet gefunden '%s'
 HydrotopeCreationOperation.4=\u00DCberpr\u00FCfe Hydrotope
-HydrotopeCreationOperation.3=Kombiere Hydrotope mit gleichen Eigenschaften.
+HydrotopeCreationOperation.3=Kombiniere Hydrotope mit gleichen Eigenschaften.
 HydrotopeCreationOperation.2=Kritscher Fehler bei \u00DCberpr\u00FCfung der Eingangsdaten aufgetreten. Eine weitere Verarbeitung nicht m\u00F6glich.
 HydrotopeCreationOperation.1=\u00DCberpr\u00FCfung Eingabedaten
 HydrotopeCreationOperation.0=Initialisierung
@@ -88,7 +88,7 @@ NaPostProcessor.1=Berechnung mit Kalypso-NA fehlgeschlagen.
 NetFileManager_2=Ung\u00FCltiges Netz bei %s\: Knoten-Knoten-Beziehung auf sich selbst
 NaPostProcessor.0=Kalypso-NA Logdatei konnte nicht gelesen werden. Berechnung mit Kalypso-NA fehlgeschlagen.
 NetFileManager_1=Ung\u00FCltiges Netz\: Verzweigungsknoten '%s' hat keinen Unterwasserstrang
-NetFileManager_0=Ung\u00FCltiges Netz\: Verzeigungsknoten '%s' hat keinen Oberwasserstrang
+NetFileManager_0=Ung\u00FCltiges Netz\: Verzweigungsknoten '%s' hat keinen Oberwasserstrang
 NetFileWriter_0=Fehler beim Zugriff auf die Knotenliste
 org.kalypso.convert.namodel.manager.CatchmentManager.143=Es existiert kein synthetischer Niederschlag f\u00FCr \: %s, Wiederkehrintervall\: %s
 org.kalypso.convert.namodel.job.NaModelParameterAnalyseSimulation.7=Fehler bei Berechnung
@@ -182,7 +182,7 @@ HydrotopeCreationGeometryValidator_5=\u00DCberlappt ein anderes Element (%.2f m\
 HydrotopeCreationGeometryValidator_4=%s - \u00FCberpr\u00FCfe Verschneidung %%d von %%d
 HydrotopeCreationGeometryValidator_3=Geometrien
 HydrotopeCreationGeometryValidator_2=Fl\u00E4che ist sehr klein (%f m\u00B2)
-HydrotopeCreationGeometryValidator_1=Gemetrie fehlt
+HydrotopeCreationGeometryValidator_1=Geometrie fehlt
 HydrotopeCreationGeometryValidator_0=%s - \u00FCberpr\u00FCfe Geometrie %%d von %%d
 org.kalypso.convert.namodel.NaModelInnerCalcJob.159=pfad
 org.kalypso.convert.namodel.schema.binding.GeologyCollection.4=Geology '%s' was removed by imported geology '%s'
@@ -195,7 +195,7 @@ HydrotopeInfo.2=Gesamtversiegelung %.2f (inklusive Korrekturfaktoren an Teilgebi
 org.kalypso.convert.namodel.schema.binding.GeologyCollection.1=Geology '%s' was deleted due to intersection
 CatchmentHydrotopeInput_0=Negativer Wert: %
 NaFortranLogTranslater.4=Fehler beim Schreiben der konvertierten Logdatei %s
-HydrotopeInfo.1=Fehler bei Bestimmtung des Versieglungsfaktors f\u00FCr Hydrotop '%s'
+HydrotopeInfo.1=Fehler bei Bestimmung des Versieglungsfaktors f\u00FCr Hydrotop '%s'
 org.kalypso.convert.namodel.NaModelInnerCalcJob.153=Datum
 NaFortranLogTranslater.3=Fehlerhafte Logdatei wird nach Kalypso zur\u00FCckkopiert. Die Element-Ids werden NICHT zur\u00FCckkonvertiert.
 HydrotopeInfo.0=Fehler bei Bestimmung der Fl\u00E4che f\u00FCr Hydrotop '%s'
@@ -225,8 +225,8 @@ org.kalypso.convert.namodel.hydrotope.LanduseImportOperation.0=Importiere Landnu
 HydrotopeDissolver_1=Hashe Geometrien %d von %d
 HydrotopeDissolver_0=Aufl\u00F6sung Hydrotope
 org.kalypso.convert.namodel.NaModelInnerCalcJob.136=Datei existiert bereits\: %s.
-org.kalypso.convert.namodel.NaModelInnerCalcJob.134=kein ergebnislink gesetzt f\u00FCr FID\=\#%s .
-org.kalypso.convert.namodel.NaModelInnerCalcJob.132=zu diesem Knoten existiert ein Pegel, einige Pegelmetadaten (z.B. Wechmann-Funktion) werden in Ergebniszeitreihe uebernommen\r\n
+org.kalypso.convert.namodel.NaModelInnerCalcJob.134=kein Ergebnislink gesetzt f\u00FCr FID\=\#%s .
+org.kalypso.convert.namodel.NaModelInnerCalcJob.132=zu diesem Knoten existiert ein Pegel, einige Pegelmetadaten (z.B. Wechmann-Funktion) werden in Ergebniszeitreihe übernommen\r\n
 org.kalypso.convert.namodel.NaModelInnerCalcJob.83=konnte Umh\u00FCllende nicht generieren, evt. keine WQ-Informationen vorhanden , Fehler\: %s
 NaModelCalcJob.1=Fehler bei der Optimierung, Optimierungsergebnis nicht vorhanden.
 NaModelCalcJob.0=Lade Eingangsdaten\u2026
@@ -234,7 +234,7 @@ NaOptimizeLoader_1=Fehler beim Lesen der Optimierungskonfiguration
 NaOptimizeLoader_0=Konnte NaOptimizeConfig im Pfad '%s' nicht finden
 org.kalypso.convert.namodel.manager.CatchmentManager.92=Es m\u00FCssen 100%% abgeschlagen werden. Restanteil des Grundwasserabflusses (%.2f%%) wird nicht weiter bilanziert. Ist dies gew\u00FCnscht?
 org.kalypso.convert.namodel.NaModelInnerCalcJob.125=lese berechnetes Ergebnis fuer \#%s, Name\: %s(%s)%n
-org.kalypso.convert.namodel.NaModelInnerCalcJob.123=lese ergebnissdatei
+org.kalypso.convert.namodel.NaModelInnerCalcJob.123=lese Ergebnissdatei
 ZftWriter_0=Fehler beim Auslesen der Zeitfl\u00E4chenfunktion
 org.kalypso.convert.namodel.manager.CatchmentManager.88=Grundwasserabfluss aus Teilgebiet (Name\: %s, ID\: %s) betr\u00E4gt nur %.2f%%.
 org.kalypso.convert.namodel.manager.CatchmentManager.84=Summe Grundwasserabgabe in Nachbargebiete > 1.0 (100%%) in Teilgebiet (Name\: %s)
@@ -255,7 +255,7 @@ NASimulationOperation_0=Simulation fehlgeschlagen
 org.kalypso.convert.namodel.manager.SchneeManager.0=/Parameter zur Schneeberechnung nach dem snow compaction verfahren
 org.kalypso.convert.namodel.manager.LzsimManager.87=Anfangswerte f\u00FCr Teilgebiet nicht vollst\u00E4ndig (GebietsID\: %s).
 org.kalypso.convert.namodel.hydrotope.GeologyImportOperation.1=Leere Geometrie bei Feature %s
-org.kalypso.convert.namodel.NaModelInnerCalcJob.50=Ergebniszeitreihe enth\u00E4lt weder Abfluss noch Waserstand, Umh\u00FCllendenberechnung nicht m\u00F6glich.
+org.kalypso.convert.namodel.NaModelInnerCalcJob.50=Ergebniszeitreihe enth\u00E4lt weder Abfluss noch Wasserstand, Umh\u00FCllendenberechnung nicht m\u00F6glich.
 org.kalypso.convert.namodel.hydrotope.GeologyImportOperation.0=Importiere Geologie
 org.kalypso.convert.namodel.NAModellConverter.25=In Shape-Datei nicht gefunden\: id\=
 org.kalypso.convert.namodel.NAModellConverter.24=Kopiewert ist null\: id\=
@@ -277,11 +277,11 @@ org.kalypso.convert.namodel.schema.binding.LanduseCollection.2=Ignoring imported
 org.kalypso.convert.namodel.schema.binding.LanduseCollection.1=Landuse '%s' was deleted due to intersection
 org.kalypso.convert.namodel.manager.ChannelManager.33=Fehler\!\!\! NA-Modell\: Anzahl Wertetripel WVQ-Beziehung > maximale Anzahl (24), R\u00FCckhaltebecken\: \#%s
 NaSimulationData_0=Fehler beim Laden des Modells
-org.kalypso.convert.namodel.NaModelInnerCalcJob.36=Simulation konnte nicht durchgefuehrt werden
+org.kalypso.convert.namodel.NaModelInnerCalcJob.36=Simulation konnte nicht durchgeführt werden
 NaSimulationDataFactory_1=Fehler beim Laden der Anfangswertdatei
-org.kalypso.convert.namodel.manager.NetFileManager.9=Netzdatei\: iabg>0 wird nicht unterstuetzt
+org.kalypso.convert.namodel.manager.NetFileManager.9=Netzdatei\: iabg>0 wird nicht unterstützt
 NaSimulationDataFactory_0=Fehler beim Laden der Simulationsdaten
-org.kalypso.convert.namodel.manager.NetFileManager.8=Netzdatei\: izug>0 wird nicht unterstuetzt
+org.kalypso.convert.namodel.manager.NetFileManager.8=Netzdatei\: izug>0 wird nicht unterstützt
 org.kalypso.convert.namodel.NaModelInnerCalcJob.32=Simulation konnte nicht erfolgreich durchgef\u00FChrt werden - lade Log-Dateien
 org.kalypso.convert.namodel.NaModelInnerCalcJob.9=Bodenspeicherbilanz
 org.kalypso.convert.namodel.NaModelInnerCalcJob.8=Bodenfeuchte
@@ -302,22 +302,22 @@ NetFileManager_10=<Unbekannt> (GML-ID\: %s)
 org.kalypso.convert.namodel.NaModelInnerCalcJob.28=Simulation erfolgreich beendet - lade Ergebnisse
 org.kalypso.convert.namodel.NaModelInnerCalcJob.27=Simulation wird durchgef\u00FChrt...
 org.kalypso.convert.namodel.NaModelInnerCalcJob.26=Keine Anfangswerte vorhanden f\u00FCr Startdatum\: %s
-org.kalypso.convert.namodel.NaModelInnerCalcJob.25=Speicherueberlauf
+org.kalypso.convert.namodel.NaModelInnerCalcJob.25=Speicherüberlauf
 org.kalypso.convert.namodel.NaModelInnerCalcJob.24=Zehrung
 org.kalypso.convert.namodel.NaModelInnerCalcJob.23=generiere ASCII-Dateien (Modelldaten und Zeitreihen)
 org.kalypso.convert.namodel.manager.LzsimManager.55=Anfangswerte nicht vollst\u00E4ndig f\u00FCr StrangID\: %s
 org.kalypso.convert.namodel.NaModelInnerCalcJob.22=Niederschlag
 org.kalypso.convert.namodel.NaModelInnerCalcJob.21=Talsperrenverdunstung
 org.kalypso.convert.namodel.NaModelInnerCalcJob.20=Wasserspiegelh\u00F6he
-org.kalypso.convert.namodel.DefaultPathGenerator.25=Speicherueberlauf
+org.kalypso.convert.namodel.DefaultPathGenerator.25=Speicherüberlauf
 org.kalypso.convert.namodel.DefaultPathGenerator.24=Zehrung
 org.kalypso.convert.namodel.DefaultPathGenerator.23=Niederschlag
 org.kalypso.convert.namodel.DefaultPathGenerator.22=Talsperrenverdunstung
-org.kalypso.convert.namodel.DefaultPathGenerator.21=Wasserspiegelhoehe
-org.kalypso.convert.namodel.DefaultPathGenerator.20=Fuellvolumen
+org.kalypso.convert.namodel.DefaultPathGenerator.21=Wasserspiegelhöhe
+org.kalypso.convert.namodel.DefaultPathGenerator.20=Füllvolumen
 OverlayHydrotopeInput_0=Overlay
-HydrotopeWriter.1=WARNUNG\: Anzahl der Bodenschichten (%d) in Hydropt (%s) ist nicht gleich den Faktoren (\=%d) im Unter-Teileinzugsgebiet (%s).
-org.kalypso.convert.namodel.NaModelInnerCalcJob.19=Fuellvolumen
+HydrotopeWriter.1=WARNUNG\: Anzahl der Bodenschichten (%d) in Hydrotop (%s) ist nicht gleich den Faktoren (\=%d) im Unter-Teileinzugsgebiet (%s).
+org.kalypso.convert.namodel.NaModelInnerCalcJob.19=Füllvolumen
 HydrotopeWriter.0=Unbekannte Bodenart '%s' in Hydrotop '%s'.
 org.kalypso.convert.namodel.NaModelInnerCalcJob.18=Statistische Abflusswerte
 org.kalypso.convert.namodel.NaModelInnerCalcJob.17=Abflussbilanz
@@ -327,7 +327,7 @@ org.kalypso.convert.namodel.NaModelInnerCalcJob.13=Zeitpunkt Start Berechnung\: 
 org.kalypso.convert.namodel.NaModelInnerCalcJob.12=Evapotranspiration
 org.kalypso.convert.namodel.NaModelInnerCalcJob.11=Abfluss
 org.kalypso.convert.namodel.NaModelInnerCalcJob.10=Grundwasserstand
-org.kalypso.convert.namodel.manager.LzsimManager.42=Anfangswerte fuer Kurzzeitsimulation geschrieben, Datum\: %s
+org.kalypso.convert.namodel.manager.LzsimManager.42=Anfangswerte für Kurzzeitsimulation geschrieben, Datum\: %s
 org.kalypso.convert.namodel.DefaultPathGenerator.19=Abflusswerte(statistisch)
 org.kalypso.convert.namodel.DefaultPathGenerator.18=Abflussbilanz
 org.kalypso.convert.namodel.DefaultPathGenerator.17=Hydrotope
