--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -36,13 +36,13 @@ CalcCaseConverter.15=Umbenennung alter Ergebnisse...
 CalcCaseConverter.16=Konvertiere Kontrolldateien...
 CalcCaseConverter.17=Aktualisiere Zeitreihenzuordnung...
 CalcCaseConverter.18=Zeitreihenzuordnungen automatisch bestimmen
-CalcCaseConverter.2=Startzeit der Rechenvariante muﬂ 00\:00 Uhr sein. Alte Startzeit (%s) wurde automatisch angepasst.
+CalcCaseConverter.2=Startzeit der Rechenvariante muss 00\:00 Uhr sein. Alte Startzeit (%s) wurde automatisch angepasst.
 CalcCaseConverter.20=F\u00FCge Simulation hinzu...
 CalcCaseConverter.21=Abschlie\u00DFen...
 CalcCaseConverter.22=\u00DCberpr\u00FCfe Gebietsmodelle und Zeitreihenzuordnungen\u2026
 CalcCaseConverter.23=Fehlender Ordner '%s' in Rechenvariante. Erzeuge leeren Ordner
 CalcCaseConverter.28=Anpassen der Zeitreihenreferenzen
-CalcCaseConverter.3=Startzeit der Anfangswerte muﬂ 00\:00 Uhr sein. Alte Startzeit (%s) wurde automatisch angepasst.
+CalcCaseConverter.3=Startzeit der Anfangswerte muss 00\:00 Uhr sein. Alte Startzeit (%s) wurde automatisch angepasst.
 CalcCaseConverter.4=Zeitreihenverweise wurden aktualisiert
 CalcCaseConverter.5=Fehlendes 'Pegel'-Verzeichnis innerhalb der Rechenvariante. Erzeuge leere Verzeichnis.
 CalcCaseConverter.6=Rechenvariante enth\u00E4lt kein 'Zufluss' Verzeichnis. Es wird ein leeres Verzeichnis angelegt.
@@ -67,8 +67,8 @@ CalculateCatchmentModelsWorker_0=Bestimme Zeitreihen-Verweise...
 CalculateCatchmentModelsWorker_1=Bestimme Zeitreihen-Verweise...
 CalculateCatchmentModelsWorker_2=Bestimmung der Zeitreihen-Verweise war erfolgreich.
 CalculateCatchmentModelsWorker_3=Fehler bei der Bestimmung von Zeitreihen-Verweise.
-CalculateCatchmentModelsWorker_4=Typ des Gebietsmodells muﬂ ILinearSumGenerator oder IMultiGenerator sein...
-CalculateCatchmentModelsWorker_5=Info des Gebietsmodells muﬂ gleich LinearSumCatchmentModelInfo oder MultiCatchmentModelInfo sein...
+CalculateCatchmentModelsWorker_4=Typ des Gebietsmodells muss ILinearSumGenerator oder IMultiGenerator sein...
+CalculateCatchmentModelsWorker_5=Info des Gebietsmodells muss gleich LinearSumCatchmentModelInfo oder MultiCatchmentModelInfo sein...
 CalculateEvaporationAction.0=Verdunstung berechnen
 CalculateEvaporationAction.1=Berechene Gras-/Seeverdunstungs-Zeitreihe f\u00FCr die gew\u00E4hlte Station.
 CalculateEvaporationAction_0=Berechnung Verdunstung
@@ -442,7 +442,7 @@ KalypsoNAProjectWizardPage.CRSTooltip=Koordinatensystem der ESRI-Shapedatei
 KalypsoNAProjectWizardPage.ErrorMessageChooseFile=Keine Datei ausgew\u00E4hlt
 KalypsoNAProjectWizardPage.ErrorMessageNotSupportedCS=Gew\u00E4hltes KoordinatenSystem wird nicht unterst\u00FCtzt\!
 KalypsoNAProjectWizardPage.ErrorMessageNotValidFile=Datei existiert nicht
-KalypsoNAProjectWizardPage.ErrorMessageWrongSuffix=Dateiendung muﬂ '.shp' sein
+KalypsoNAProjectWizardPage.ErrorMessageWrongSuffix=Dateiendung muss '.shp' sein
 KalypsoNAProjectWizardPage.FileGroupText=Shape-Datei
 KalypsoNAProjectWizardPage.FileLabelText=Dateiname
 KalypsoNAProjectWizardPage.MappingGroupText=Zuordnung der Eigenschaften
@@ -704,7 +704,7 @@ TimeseriesExtendOperation_0=Modell enth\u00E4lt ung\u00FCltige Zeitreihenverkn\u
 TimeseriesExtendOperation_1=Fehler beim Laden von Zeitreihe\: %s
 TimeseriesExtendVisitor_0=Pr\u00FCfung der Zeitreihenl\u00E4nge
 TimeseriesExtender_0=Keine Zeitreihe\: %s
-TimeseriesExtender_1=Zeitreihe %s muﬂ mindestens zwei Wert enthalten. Automatische Verl\u00E4ngerung nicht m\u00F6glich.
+TimeseriesExtender_1=Zeitreihe %s muss mindestens zwei Wert enthalten. Automatische Verl\u00E4ngerung nicht m\u00F6glich.
 TimeseriesExtender_2=Zeitreihe %s wurde automatisch verl\u00E4ngert (%d Zeitschritt(e))
 TimeseriesExtender_3=Zeitreihe %s wurde um %d Zeitschritte automatisch verl\u00E4ngert. Bitte pr\u00FCfen Sie die Zeitreihe.
 TimeseriesExtender_4=Zeitreihe %s\: mehr als %d Zeitschritte m\u00FCssten hinzugef\u00FCgt werden. Abbruch, Zeitreihe wurde nicht verl\u00E4ngert.
