--- a/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
+++ b/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
@@ -146,8 +146,8 @@ AbstractHydrotopeInput.1=Element '%s'\: %s
 org.kalypso.convert.namodel.hydrotope.GeologyShapeInputDescriptor.3=Unbekannte Spalte "%s" in der Shapedatei
 org.kalypso.convert.namodel.hydrotope.GeologyShapeInputDescriptor.2=Multi-Parts sind noch nicht implementiert
 LzsimWriter.7=Fehler beim Schreiben der Anfangswerte f\u00FCr Strang '%s'
-LzsimWriter.5=F\u00FCr Teilgebiet %s wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teilgebiets berechnet wurde.
-LzsimWriter.4=F\u00FCr Hydrotop mit GML-ID %s (Teilgebiet %s) wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teilgebiets berechnet wurde.
+LzsimWriter.5=F\u00FCr Teilgebiet %s wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teileinzuggebiets berechnet wurde.
+LzsimWriter.4=F\u00FCr Hydrotop mit GML-ID %s (Teilgebiet %s) wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teileinzuggebiets berechnet wurde.
 LzsimWriter.3=Fehler beim Schreiben der Anfangswerte f\u00FCr Strang '%s'
 LzsimWriter.2=Kalypso-NA ASCII Anfangswerte konnten nicht geschrieben werden\: %s
 LzsimWriter.1=Fehlender Anfangswert f\u00FCr Hydrotop\: %s. Wird eine Anfangsbedinung angegeben, m\u00FCsse f\u00FCr alle Hydrotope Werte vorliegen.
