NEW - # 124: i18n RRM plugins https://dev.bjoernsen.de/hydrology/ticket/124

--- a/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
+++ b/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
@@ -97,7 +97,7 @@ org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.5=Schritt %d / 
 ShapeWithHash.0=Fehler beim Lesen von Shape '%s'
 org.kalypso.convert.namodel.DefaultPathGenerator.9=Interflow
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.4=Vereinige Hydrotope... (%d von %d)
-org.kalypso.convert.namodel.DefaultPathGenerator.8=Oberflaechenabfluss(natuerlich)
+org.kalypso.convert.namodel.DefaultPathGenerator.8=Oberflaechenabfluss(natürlich)
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.3=Erzeuge Hydrotope... (%d von %d)
 org.kalypso.convert.namodel.DefaultPathGenerator.7=Gesamtabfluss
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.2=Erzeugen der Hydrotope
