--- a/trunk/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
@@ -244,7 +244,7 @@ org.kalypso.convert.namodel.manager.CatchmentManager.81=Fehler beim Schreiben de
 NAControlConverter.0='Wiederkehrzeit' muss bei synthetischen Niederschlagsereignissen angegeben werden.
 TimeseriesMappingType_1=Zufluss Knoten
 org.kalypso.convert.namodel.manager.CatchmentManager.80=Fehlendes oder ung\u00FCltiges Ziel f\u00FCr einen Grundwasserabfluss im Teilgebiet %s.
-TimeseriesMappingType_0=Sch\u00E4tze Ma\u00DFnahme
+TimeseriesMappingType_0=Pegelmessung
 org.kalypso.convert.namodel.NaModelInnerCalcJob.69=Sie haben keine Version des Fortran Codes angegeben oder die von Ihnen angegebene Version wird nicht weiter unterst\u00FCtzt.
 NASimulationOperation_8=L\u00F6schen des tempor\u00E4ren Simulationsverzeichnis fehlgeschlagen.
 NASimulationOperation_7=Das Simulations-Log konnte nicht geladen werden.
