--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -642,7 +642,7 @@ SetBasicModelDelegate.6=Siehe Details\:
 SimulationCalculationFeatureControl.0=Hier k\u00F6nnen einige Ergebnis- und Log-Dateien eingesehen werden.
 SimulationCalculationFeatureControl.1=Aktualisiere \u2013 bitte warten...
 SimulationCalculationFeatureControl.10=Statistik
-SimulationCalculationFeatureControl.11=Zeige die Statistik.
+SimulationCalculationFeatureControl.11=Statistik mit Excel öffnen
 SimulationCalculationFeatureControl.12=Berechne
 SimulationCalculationFeatureControl.13=Berechne Simulationen
 SimulationCalculationFeatureControl.2=Rechenergebnisse
@@ -651,8 +651,8 @@ SimulationCalculationFeatureControl.4=Berechnungs-Log
 SimulationCalculationFeatureControl.5=Zeige Log-Datei der Berechnung
 SimulationCalculationFeatureControl.6=Rechenkern Fehler-Log
 SimulationCalculationFeatureControl.7=Zeige das Rechenkern Fehler-Log
-SimulationCalculationFeatureControl.8=Bilanz
-SimulationCalculationFeatureControl.9=Zeige die Bilanz
+SimulationCalculationFeatureControl.8=Abflussbilanz
+SimulationCalculationFeatureControl.9=Zeige Abflussbilanz
 SimulationHandler_0=Simulation mit fehlenden Namen entdeckt. Bitte weisen Sie einen Namen zu.
 SimulationHandler_1=OK
 SimulationHandler_2=Die Simulation wurde abgebrochen.
