Improved some texts

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -642,7 +642,7 @@ SetBasicModelDelegate.6=See Details\:
 SimulationCalculationFeatureControl.0=Here you can review some result files and the logs of the calculation.
 SimulationCalculationFeatureControl.1=Please wait while updating...
 SimulationCalculationFeatureControl.10=Statistics
-SimulationCalculationFeatureControl.11=Displays the statistics.
+SimulationCalculationFeatureControl.11=Displays the statistics in excel
 SimulationCalculationFeatureControl.12=Calculate
 SimulationCalculationFeatureControl.13=Calculate Simulations
 SimulationCalculationFeatureControl.2=Calculation results
@@ -651,8 +651,8 @@ SimulationCalculationFeatureControl.4=Calculation log
 SimulationCalculationFeatureControl.5=Displays the calculation log.
 SimulationCalculationFeatureControl.6=Error log (calculation core)
 SimulationCalculationFeatureControl.7=Displays the error log.
-SimulationCalculationFeatureControl.8=Balance
-SimulationCalculationFeatureControl.9=Displays the balance.
+SimulationCalculationFeatureControl.8=Mass Balance
+SimulationCalculationFeatureControl.9=Displays the mass balance.
 SimulationHandler_0=Simulations with empty name detected. Please rename the simulations.
 SimulationHandler_1=OK
 SimulationHandler_2=The calculation was canceled.
