--- a/KalypsoModelNA/etc/schema/gml/control_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/control_de.properties
@@ -29,7 +29,7 @@ rrmMeta_NAControl_rrmMeta_minutesTimestep_tooltip=Berechnungszeitschritt [min]
 rrmMeta_NAControl_rrmMeta_pns_label=synthetischer Niederschlag
 rrmMeta_NAControl_rrmMeta_pns_tooltip=Berechnung mit synthetischem Niederschlag
 rrmMeta_NAControl_rrmMeta_returnPeriod_label=Wiederkehr Intervall
-rrmMeta_NAControl_rrmMeta_returnPeriod_tooltip=Wiederkehr Intervall (optional)
+rrmMeta_NAControl_rrmMeta_returnPeriod_tooltip=Wiederkehr Intervall (nur zur Information, optional)
 rrmMeta_NAControl_rrmMeta_endsimulation_label=Ende der Simulation
 rrmMeta_NAControl_rrmMeta_endsimulation_tooltip=Endzeitpunkt der Simulation
 rrmMeta_NAControl_rrmMeta_startsimulation_label=Start der Simulation
