NEW - # 124: i18n RRM plugins https://dev.bjoernsen.de/hydrology/ticket/124

--- a/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
+++ b/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
@@ -233,7 +233,7 @@ NaModelCalcJob.0=Lade Eingangsdaten\u2026
 NaOptimizeLoader_1=Fehler beim Lesen der Optimierungskonfiguration
 NaOptimizeLoader_0=Konnte NaOptimizeConfig im Pfad '%s' nicht finden
 org.kalypso.convert.namodel.manager.CatchmentManager.92=Es m\u00FCssen 100%% abgeschlagen werden. Restanteil des Grundwasserabflusses (%.2f%%) wird nicht weiter bilanziert. Ist dies gew\u00FCnscht?
-org.kalypso.convert.namodel.NaModelInnerCalcJob.125=lese berechnetes Ergebnis fuer \#%s, Name\: %s(%s)%n
+org.kalypso.convert.namodel.NaModelInnerCalcJob.125=lese berechnetes Ergebnis für \#%s, Name\: %s(%s)%n
 org.kalypso.convert.namodel.NaModelInnerCalcJob.123=lese Ergebnissdatei
 ZftWriter_0=Fehler beim Auslesen der Zeitfl\u00E4chenfunktion
 org.kalypso.convert.namodel.manager.CatchmentManager.88=Grundwasserabfluss aus Teilgebiet (Name\: %s, ID\: %s) betr\u00E4gt nur %.2f%%.
