--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -287,7 +287,7 @@ EditMappingAction_1=Edit the properties of the mapping
 EditMappingAction_2=Timeseries mapping contains invalid elements (will be lost after edit)\:
 EditMultiDialog_0=Edit Multi Catchment Model
 EditMultiDialog_1=Edit Multi Catchment Model
-EditMultiDialog_2=Multi Gernator
+EditMultiDialog_2=Multi Generator
 EditMultiDialog_3=Generators
 EditMultiDialog_4=Dialog has validation errors. %s
 EditMultiDialog_5=Description
