--- a/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
+++ b/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
@@ -8,9 +8,9 @@ HydrotopeInputIndexer.0=%d of %d - %s
 NetElement.4=Missing downstream node for channel %s
 NetElement.3=Failed to write timeseries for catchment '%s' (%s)
 NAModelPreprocessor.6=Applying calibration factors\u2026
-NAModelPreprocessor.5=Failed to unzip preprocessed ascii files
+NAModelPreprocessor.5=Failed to unzip pre-processed ascii files
 NAModelPreprocessor.4=Failed to write Kalypso-NA ASCII start condition\: %s
-NAModelPreprocessor.3=Failed to copy preprocessed ascii files
+NAModelPreprocessor.3=Failed to copy pre-processed ascii files
 NAModelPreprocessor.2=Writing control files for Kalypso-NA
 NAModelPreprocessor.1=Adding additional virtual channels
 NAModelPreprocessor.0=Unexpected error while generating Kalypso-NA ASCII files
@@ -19,7 +19,7 @@ PedologyHydrotopeInput_0=Pedology
 NAStatistics.0=Failed to create statistics\: %s
 org.kalypso.convert.namodel.manager.BodentypManager.4=bodart(%s)\: %s
 NaModelInnerCalcJob.0=Simulation cancelled by user
-org.kalypso.convert.namodel.manager.CatchmentManager.1=Property '%s' should be set for all groundwater elements of sub-catchment %s
+org.kalypso.convert.namodel.manager.CatchmentManager.1=Property '%s' should be set for all ground water elements of sub-catchment %s
 org.kalypso.convert.namodel.manager.CatchmentManager.0=Teilgebiet %s wird Standard-Zeitfl\u00E4chenfunktion zugeordnet (im Modell ist dem Teilgebiet keine Zeitfl\u00E4chenfunktion zugeordnet)
 HydrotopeValidator_8=Catchment coverage
 HydrotopeValidator_7=Area of Catchment '%s' is smaller than the sum of it's hydrotope areas (difference is %.1f %%)
@@ -33,7 +33,7 @@ HydrotopeValidator_0=Validating hydrotopes
 NAOptimizingJob_5=Unexpected error during simulation
 LinearSumGenerator_3=Generating timeseries %d for area '%s' mit %d weighted timeseries\u2026
 NAOptimizingJob_4=Simulation canceled by user
-LinearSumGenerator_2=Collecting weighted timeseries for gernating timeseries %d of area '%s'
+LinearSumGenerator_2=Collecting weighted timeseries for generating timeseries %d of area '%s'
 NAOptimizingJob_3=Loading simulation data...
 LinearSumGenerator_1=Generating timeseries\u2026.
 LinearSumGenerator_0=Generating timeseries for  %d areas...
@@ -47,13 +47,13 @@ RrmSimulation.0=Climate
 HydroHash_0=Failed to find catchment for hydrotope '%s'
 HydrotopeCreationOperation.4=Validate Hydrotopes
 HydrotopeCreationOperation.3=Combine hydrotopes with identical attributes
-HydrotopeCreationOperation.2=Critical error during inut validation. Unable to proceed.
+HydrotopeCreationOperation.2=Critical error during input validation. Unable to proceed.
 HydrotopeCreationOperation.1=Input validation
-HydrotopeCreationOperation.0=Initialisation
+HydrotopeCreationOperation.0=Initialization
 HydrotopeBuilder_2=Built %d hydrotopes
 HydrotopeBuilder_1=Adding hydrotope %d of %d
 HydrotopeBuilder_0=Building hydrotopes
-StationClasses_2=Unknown dictionary\: 
+StationClasses_2=Unknown dictionary\:
 StationClasses_0=Unknown station class\: %s
 NAModelSimulation.12=Post processing
 NAModelSimulation.11=Processing
@@ -68,13 +68,13 @@ org.kalypso.convert.namodel.manager.ChannelManager.2=Es existiert keine (g\u00FC
 AbstractImportOperation.3=Shape Data is too big
 org.kalypso.convert.namodel.FeatureListGeometryIntersector.1=Initializing spatial indices
 org.kalypso.convert.namodel.manager.ChannelManager.1=ChannelType %s is not supported
-org.kalypso.convert.namodel.NaModelCalcJob.0=Unexcepted error during KalypsoHydrology simulation\: %s
+org.kalypso.convert.namodel.NaModelCalcJob.0=Unexpected error during KalypsoHydrology simulation\: %s
 AbstractImportOperation.2=Read error at feature %d
 org.kalypso.convert.namodel.FeatureListGeometryIntersector.0=Geometry Intersection
 org.kalypso.convert.namodel.manager.ChannelManager.0=\ km(%d)\: %s
 AbstractImportOperation.1=Problems during import
 AbstractImportOperation.0=Import successfully terminated.
-TsFileWriter.0=Failed to write timeseries for subcatchment '%s'
+TsFileWriter.0=Failed to write timeseries for sub-catchment '%s'
 NetFileManager_9=%s has no downstream net element.
 NetFileManager_8=%s is not connected to network.
 NetFileManager_7=Downstream catchment for %s cannot be resolved.
@@ -82,7 +82,7 @@ NetFileManager_6=%s is not connected to network
 NaPostProcessor.4=Failed to copy Kalypso-NA log files.
 NetFileManager_5=Impossible net at %s\: channel discharges to itself
 NetFileManager_4=%s has no downstream connection
-NaPostProcessor.2=Simulation failed, results will not be postprocessed
+NaPostProcessor.2=Simulation failed, results will not be post-processed
 NetFileManager_3=%s is outside network
 NaPostProcessor.1=Kalypso-NA calculation failed.
 NetFileManager_2=Impossible net at %s\: Node-Node relation to itself
@@ -119,7 +119,7 @@ org.kalypso.convert.namodel.job.NaModelParameterAnalyseSimulation.12=copy somewh
 org.kalypso.convert.namodel.manager.ParseManager.4=Nutzungsdatei\: %s
 NetFileAnalyser_12=Strand \#%s
 org.kalypso.convert.namodel.manager.ParseManager.3=Nutzungsdatei\: %s
-NetFileAnalyser_11=Subcatchment \#%s
+NetFileAnalyser_11=Sub-catchment \#%s
 NetFileAnalyser_10=<unknown> (GML-ID\: %s)
 org.kalypso.convert.namodel.manager.ParseManager.1=keine Datei boden_art.dat vorhanden
 LzsToGml.0=Failed to read lzsim file\: %s
@@ -131,7 +131,7 @@ org.kalypso.convert.namodel.NaModelInnerCalcJob.228=ERR\:
 org.kalypso.convert.namodel.NaModelInnerCalcJob.224=Failed to copy %s (%s)
 NetFileAnalyser_9=%s has no downstream net element.
 NetFileAnalyser_8=%s is not connected to network.
-NetFileAnalyser_7=Target catchmetn for groundwater relation at %s cannot be resolved.
+NetFileAnalyser_7=Target catchment for ground water relation at %s cannot be resolved.
 NetFileAnalyser_6=%s is not connected to network
 org.kalypso.convert.namodel.NaModelInnerCalcJob.220=Copying %s
 NetFileAnalyser_5=Impossible net at %s\: channel discharges to itself
@@ -156,7 +156,7 @@ LzsimWriter.0=Missing start condition for catchment\: %s
 org.kalypso.convert.namodel.NaModelInnerCalcJob.167=Statistical report
 org.kalypso.convert.namodel.schema.binding.SoilTypeCollection.4=SoilType '%s' was removed by imported soilType '%s'
 org.kalypso.convert.namodel.schema.binding.SoilTypeCollection.3=SoilType '%s' was reduced by imported soilType '%s'
-org.kalypso.convert.namodel.schema.binding.SoilTypeCollection.2=Ingoring imported soilType '%s' due to intersection
+org.kalypso.convert.namodel.schema.binding.SoilTypeCollection.2=Ignoring imported soilType '%s' due to intersection
 NAModelSimulation.9=Simulation failed
 org.kalypso.convert.namodel.schema.binding.SoilTypeCollection.1=SoilType '%s' was deleted due to intersection
 NAModelSimulation.8=Simulation finished
@@ -165,7 +165,7 @@ NAModelSimulation.6=Simulation canceled...
 org.kalypso.convert.namodel.manager.HydrotopManager.3=Severe error in area calculation. The sum of hydrotop areas (%.2f m2) does not match the catchment area (ID\: %s, area\: %.2f m2). Difference\: %.2f m2 (%.2f%%).
 org.kalypso.convert.namodel.NaModelInnerCalcJob.160=Statistical report\: unable to parse node result '%s' in result file '%s'
 NAModelSimulation.5=Simulation canceled
-org.kalypso.convert.namodel.manager.HydrotopManager.2=Hydrotops from GML
+org.kalypso.convert.namodel.manager.HydrotopManager.2=Hydrotopes from GML
 NAModelSimulation.4=Simulation canceled...
 org.kalypso.convert.namodel.manager.HydrotopManager.1=Landuse class '%s' referenced by hydrotop '%s' is not defined. Calculation aborted.
 NAModelSimulation.3=Starting simulation\u2026
@@ -205,9 +205,9 @@ KalypsoNaProcessor.1=Failed to copy Kalypso-NA.exe into calculation directory\: 
 KalypsoNaProcessor.0=No Kalypso-NA.exe version configured.
 NutzungWriter_0=Failed to read hydrograph
 org.kalypso.convert.namodel.NAModellConverter.9=inserting geometries\: catchments
-StationClassesCatalog_3=Unknown dictionary\: 
-org.kalypso.convert.namodel.NAModellConverter.4=Outputfolder\:
-org.kalypso.convert.namodel.NAModellConverter.3=Conversion from ASCII to GML was successfull
+StationClassesCatalog_3=Unknown dictionary\:
+org.kalypso.convert.namodel.NAModellConverter.4=Output folder\:
+org.kalypso.convert.namodel.NAModellConverter.3=Conversion from ASCII to GML was successful
 StationClassesCatalog_1=Unknown station class\: %s
 org.kalypso.convert.namodel.NAControlConverter.49=Wrong selection of the synthetic rainfall distribution.
 StationClassesCatalog_0=Unknown station class\: %s
@@ -243,7 +243,7 @@ TimeseriesMappingType_2=Storage evaporation
 org.kalypso.convert.namodel.manager.CatchmentManager.81=Failed to write hydrograph for sub-catchment %s.
 NAControlConverter.0='Return Period' must be set for synthetic precipitation event.
 TimeseriesMappingType_1=Node inflow
-org.kalypso.convert.namodel.manager.CatchmentManager.80=Missing or invalid target for groundwater definition in sub-catchment %s.
+org.kalypso.convert.namodel.manager.CatchmentManager.80=Missing or invalid target for ground water definition in sub-catchment %s.
 TimeseriesMappingType_0=Gauge measurement
 org.kalypso.convert.namodel.NaModelInnerCalcJob.69=Sie haben keine Version des Fortran Codes angegeben oder die von Ihnen angegebene Version wird nicht weiter unterst\u00FCtzt.
 NASimulationOperation_8=Failed to delete temporary simulation directory
@@ -255,7 +255,7 @@ NASimulationOperation_0=Simulation failed
 org.kalypso.convert.namodel.manager.SchneeManager.0=/Parameter zur Schneeberechnung nach dem snow compaction verfahren
 org.kalypso.convert.namodel.manager.LzsimManager.87=Anfangswerte f\u00FCr Teilgebiet nicht vollst\u00E4ndig (GebietsID\: %s).
 org.kalypso.convert.namodel.hydrotope.GeologyImportOperation.1=Null geometry at feature\: %s
-org.kalypso.convert.namodel.NaModelInnerCalcJob.50=Ergebniszeitreihe enth\u00E4lt weder Abfluss noch Waserstand, Umh\u00FCllendenberechnung nicht m\u00F6glich.
+org.kalypso.convert.namodel.NaModelInnerCalcJob.50=Ergebniszeitreihe enth\u00E4lt weder Abfluss noch Wasserstand, Umh\u00FCllendenberechnung nicht m\u00F6glich.
 org.kalypso.convert.namodel.hydrotope.GeologyImportOperation.0=Importing Geology
 org.kalypso.convert.namodel.NAModellConverter.25=not found in shapeFile\: id\=
 org.kalypso.convert.namodel.NAModellConverter.24=copyvalue is null\: id\=
@@ -343,11 +343,11 @@ FeatureListGeometryIntersector.5=Failed to intersect '%s' with '%s'.
 FeatureListGeometryIntersector.4=Possible problem intersecting %s with %s
 FeatureListGeometryIntersector.3=Problem at feature
 FeatureListGeometryIntersector.2=Total area difference from intersection\: %s
-GeologyHydrotopeInput_3=maximal perkolation rate is not set
+GeologyHydrotopeInput_3=maximal percolation rate is not set
 FeatureListGeometryIntersector.1=Problem while intersecting \r\n%s\r\n%s
-GeologyHydrotopeInput_2=groundwater factor is outside it's valid range [0.0 - 1.0]
+GeologyHydrotopeInput_2=ground water factor is outside it's valid range [0.0 - 1.0]
 FeatureListGeometryIntersector.0=Problem at feature %s
-GeologyHydrotopeInput_1=groundwater factor is not set
+GeologyHydrotopeInput_1=ground water factor is not set
 GeologyHydrotopeInput_0=Geology
 org.kalypso.convert.namodel.hydrotope.PedologyShapeInputDescriptor.3=Unknown column '%s' in shape file
 org.kalypso.convert.namodel.hydrotope.PedologyShapeInputDescriptor.2=Multi-Parts not implemented yet
