Added max. percolation and gwInflowRate to drwbm definition. Fixed gft and gtt

--- a/KalypsoModelNA/etc/schema/gml/geologie_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/geologie_de.properties
@@ -13,4 +13,4 @@ rrmGeo_Geology_rrmGeo_location_tooltip=Lage
 rrmGeo_Geology_rrmGeo_gwInflowRate_label=Grundwasseranteil
 rrmGeo_Geology_rrmGeo_gwInflowRate_tooltip=Zuflussanteil Grundwasser [-] (\= 0-1)
 rrmGeo_Geology_rrmGeo_maxPerc_label=Max. Perkolationsrate
-rrmGeo_Geology_rrmGeo_maxPerc_tooltip=Maximale Perkolationsrate [m/s]
+rrmGeo_Geology_rrmGeo_maxPerc_tooltip=Maximale Perkolationsrate [mm/d]
