--- a/KalypsoModelNA/etc/schema/gml/parameter_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/parameter_de.properties
@@ -87,8 +87,12 @@ rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_tooltip=Breite oder Länge 
 rrmParam_DRWBMDefinition_label=${listProperty\:http\://www.opengis.net/gml\#name;0;description doesn't exists}
 rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_label=DRWBM Bodenprofil
 rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_tooltip=Verweis auf DRWBM Bodenprofil
-rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_label=DRWBM Landnutzungsgruppe
-rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_tooltip=Verweis auf DRWBM Landnutzungsgruppe
+rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_label=Landnutzungsgruppe
+rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_tooltip=Verweis auf Landnutzungsgruppe
+rrmParam_DRWBMDefinition_rrmParam_gwInflowRate_label=Grundwasseranteil
+rrmParam_DRWBMDefinition_rrmParam_gwInflowRate_tooltip=Zuflussanteil Grundwasser [-] (\= 0-1)
+rrmParam_DRWBMDefinition_rrmParam_maxPerc_label=Max. Perkolationsrate
+rrmParam_DRWBMDefinition_rrmParam_maxPerc_tooltip=Maximale Perkolationsrate [mm/d]
 rrmParam_DRWBMSoiltype_label=${property\:http\://www.opengis.net/gml\#description;-keine Beschreibung vorhanden-}
 rrmParam_DRWBMSoilLayerParameter_rrmParam_drainagePipeKFvalue_label=Durchlässigkeit Dränrohr [KF-Wert]
 rrmParam_DRWBMSoilLayerParameter_rrmParam_drainagePipeKFvalue_tooltip=Durchlässigkeit Dränrohr in KF-Wert
