compare of scenarios during merge scenarios, simulation renameing extension control (does not rename the folder at the momend)

--- a/KalypsoModelNA/etc/schema/gml/namodell_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/namodell_de.properties
@@ -4,8 +4,8 @@ http___www.opengis.net_gml=gml
 http___www.tuhh.de_kalypsoNA=rrm
 rrm_CatchmentCollection_description=Teilgebietsliste
 rrm_CatchmentCollection_label=Teilgebietsliste
-rrm_CatchmentCollection_rrm_catchmentMember_label=hat
-rrm_CatchmentCollection_rrm_catchmentMember_tooltip=hat
+rrm_CatchmentCollection_rrm_catchmentMember_label=Teilgebiete
+rrm_CatchmentCollection_rrm_catchmentMember_tooltip=Teilgebiete
 rrm_Catchment_name=Teilgebiet
 rrm_Catchment_description=Teilgebiet
 rrm_Catchment_label=Teilgebiet - ${listProperty\:http\://www.opengis.net/gml\#name;0}
@@ -111,8 +111,8 @@ rrm_Catchment_rrm_corrGWInflowRate_tooltip=Korrekturfaktor des Zuflussanteils Gr
 
 rrm_ChannelCollection_description=Gew\u00E4sserstrangliste
 rrm_ChannelCollection_label=Gew\u00E4sserstrangliste
-rrm_ChannelCollection_rrm_channelMember_label=hat
-rrm_ChannelCollection_rrm_channelMember_tooltip=hat
+rrm_ChannelCollection_rrm_channelMember_label=Gewässerstränge
+rrm_ChannelCollection_rrm_channelMember_tooltip=Gewässerstränge
 
 rrm__Channel_name=Strang
 rrm__Channel_label=Strang - ${property\:http\://www.opengis.net/gml\#name}
@@ -173,8 +173,8 @@ rrm_NaModell_rrm_SwaleAndTrenchCollectionMember_label=besteht aus Mulden-Rigolen
 rrm_NaModell_rrm_SwaleAndTrenchCollectionMember_tooltip=besteht aus Mulden-Rigolen
 rrm_NodeCollection_description=Modellknotenliste
 rrm_NodeCollection_label=Modellknotenliste
-rrm_NodeCollection_rrm_nodeMember_label=hat
-rrm_NodeCollection_rrm_nodeMember_tooltip=hat
+rrm_NodeCollection_rrm_nodeMember_label=Modellknoten
+rrm_NodeCollection_rrm_nodeMember_tooltip=Modellknoten
 rrm_Node_name=Knoten
 rrm_Node_description=Knoten
 rrm_Node_label=Knoten - ${listProperty\:http\://www.opengis.net/gml\#name;0}
