--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -12,16 +12,16 @@ AbstractResultTreeNodeUiHandler_7=\u00D6ffne Statistik
 AbstractResultTreeNodeUiHandler_8=Zeige Statistik.
 AbstractTreeNodeUiHandler_0=Eigenschaften
 AbstractTreeNodeUiHandler_1=Aktionen
-BasicModelConverter.0=Konvertiere Basisdaten
+BasicModelConverter.0=Konvertierung Basisdaten
 BasicModelConverter.1=Kopiere GML-Dateien
 BasicModelConverter.12=Zeitreihenverweise wurden aktualisiert.
-BasicModelConverter.2=Sammeln der Zeitreihentypen
+BasicModelConverter.2=Indizieren der Zeitreihentypen
 BasicModelConverter.3=Kopiere und Konvertiere Zeitreihen-Dateien
-BasicModelConverter.4=Konvertiere Zeitreihenverweise
-BasicModelConverter.5=Konvertiere Zeitreihe
+BasicModelConverter.4=Konvertierung Zeitreihenverweise
+BasicModelConverter.5=Konvertierung Zeitreihen
 BasicModelConverter.6=Lese Stationsdatei
 BasicModelConverter.7=Speiche Stationsdatei
-BasicModelConverter.8=Konvertiere Zeitreihen aus Verzeichnis '%s'
+BasicModelConverter.8=Konvertierung Zeitreihen aus Verzeichnis '%s'
 BasicModelConverter.9=Anpassen der Zeitreihenreferenzen
 BasicModelConverter_1=\u00DCbernahme Basisdaten
 BasicModelConverter_2=Projekt enth\u00E4lt keine Datei f\u00FCr die synthetischen Niederschl\u00E4ge. Es wird die Standardvorlage verwendet.
@@ -47,8 +47,8 @@ CalcCaseConverter.4=Zeitreihenverweise wurden aktualisiert
 CalcCaseConverter.5=Fehlendes 'Pegel'-Verzeichnis innerhalb der Rechenvariante. Erzeuge leere Verzeichnis.
 CalcCaseConverter.6=Rechenvariante enth\u00E4lt kein 'Zufluss' Verzeichnis. Es wird ein leeres Verzeichnis angelegt.
 CalcCaseConverter.7=Hydrotopdatei fehlt in Rechenvariante. Es wird die Hydrotopdatei des Basismodells kopiert.
-CalcCaseConverter.8=Steuerparameter wurden umgewandelt.
-CalcCaseConverter.9=Ausgabe-Steuerparameter wurden umgewandelt.
+CalcCaseConverter.8=Konvertierung Steuerparameter
+CalcCaseConverter.9=Konvertierung Ausgabe-Steuerparameter
 CalcCaseConverter_0=Kopiere Grunddaten...
 CalcCaseConverter_2=Kalypso-NA.exe ge\u00E4ndert auf '%s'. Voreingestellt war '%s'.
 CalcCaseConverter_3=Kalypso-NA.exe war bereits auf '%s' voreingestellt.
@@ -123,7 +123,7 @@ CatchmentModelHelper_1=\u00DCberpr\u00FCfung des Gesamtgebietsmodells '%s'
 CatchmentModelHelper_12=Niederschlag
 CatchmentModelHelper_13=Temperatur
 CatchmentModelHelper_14=Verdunstung
-CatchmentModelHelper_15=\u00DCberpr\u00FCfung der Zeitreihen abgeschlossen.
+CatchmentModelHelper_15=\u00DCberpr\u00FCfung der Zeitreihen
 CatchmentModelHelper_16=\u00DCberpr\u00FCfung des Gebietsmodells '%s'
 CatchmentModelHelper_17=\u00DCberpr\u00FCfung der Zeitreihenzuordnungen des Typs '%s'
 CatchmentModelHelper_18=Die neue Zeitreihen Wert unterscheidet sich um %d%% (%d Differenz).
@@ -143,12 +143,12 @@ CatchmentModelVerifier_0=\u00DCberpr\u00FCfe Gebietsmodelle der Simulation\: '%s
 CatchmentModelVerifier_1=\u00DCberpr\u00FCfe Gebietsmodelle der Simulation\: '%s'...
 CatchmentModelVerifier_10=Gebietsmodell-Generierung erfolgreich getestet.
 CatchmentModelVerifier_2=\u00DCberpr\u00FCfe die Gebietsmodelle der Simulation '%s'
-CatchmentModelVerifier_3=Der N-Gebietsmodell lieferte null oder hatte keine Faktoren...
-CatchmentModelVerifier_4=Der N-Gebietsmodell war ok.
-CatchmentModelVerifier_5=Der E-Gebietsmodell war null oder hatte keine Faktoren\u2026
-CatchmentModelVerifier_6=Der E-Gebietsmodell war ok.
-CatchmentModelVerifier_7=Der T-Gebietsmodell war null oder hatte keine Faktoren
-CatchmentModelVerifier_8=Der T-Gebietsmodell war ok.
+CatchmentModelVerifier_3=N-Gebietsmodell lieferte null oder hatte keine Faktoren...
+CatchmentModelVerifier_4=N-Gebietsmodell
+CatchmentModelVerifier_5=E-Gebietsmodell war null oder hatte keine Faktoren\u2026
+CatchmentModelVerifier_6=E-Gebietsmodell
+CatchmentModelVerifier_7=T-Gebietsmodell war null oder hatte keine Faktoren
+CatchmentModelVerifier_8=T-Gebietsmodell
 CatchmentModelVerifier_9=Die N/E/T Gebietsmodelle waren ok.
 CatchmentModelsDuplicateEliminator.0=\u00DCberpr\u00FCfe Gebietsmodelle auf Duplikate
 CatchmentModelsDuplicateEliminator.1=\u00DCberpr\u00FCfe Gebietsmodelle auf Duplikate
@@ -210,11 +210,11 @@ CompleteNetElementsTaskHandler_0=Kalinin-Miljukov Strang
 CompleteNetElementsTaskHandler_1=Speicherstrang
 CompleteNetElementsTaskHandler_2=Teileinzugsgebiete
 ConvertGeologyOperation_0=Konvertierung der geology.gml fehlgeschlagen.
-ConvertGeologyOperation_1=Konvertiere geology.gml
+ConvertGeologyOperation_1=Konvertierung geology.gml
 ConvertHydrotopesOperation_0=Konvertierung der hydrotop.gml fehlgeschlagen.
-ConvertHydrotopesOperation_1=Konvertiere hydrotop.gml
+ConvertHydrotopesOperation_1=Konvertierung hydrotop.gml
 ConvertLanduseOperation_0=Konvertierung der landuse.gml fehlgeschlagen.
-ConvertLanduseOperation_1=Konvertiere landuse.gml
+ConvertLanduseOperation_1=Konvertierung landuse.gml
 CreateSimulationWorker_0=Erzeuge Simulation\u2026
 CreateSimulationWorker_1=Erzeuge Simulation\u2026
 CreateSimulationWorker_2=Erzeugen der Simulation war erfolgreich.
@@ -720,7 +720,7 @@ TimeseriesImporter_10=Erzeugt durch Projektkonvertierung
 TimeseriesImporter_11=Projektkonvertierung
 TimeseriesImporter_2=Konvertiere Zeitreihe\: %s
 TimeseriesImporter_4=Fehler bei Konvertierung der Zeitreihe '%s'
-TimeseriesImporter_5=Importiere Zeitreihe aus '%s'
+TimeseriesImporter_5=Importiere Zeitreihen aus '%s'
 TimeseriesImporter_6=\u00DCberspringe Zeitreihe '%s'\: Keine Datumsachse
 TimeseriesImporter_7=\u00DCberspringe Zeitreihe '%s'\: Keine Wertachse
 TimeseriesImporter_8=Fehler beim Import der Zeitreihe '%s'\: mehr als eine Wertachse
@@ -741,7 +741,7 @@ TimeseriesMappingTypeUiHandler_0=Zuordnungs Definitionen
 TimeseriesMappingTypeUiHandler_1=Zeitreihenzuordnungen - %s
 TimeseriesMappingUiHandler_0=Zeitreihenzuordnung
 TimeseriesParameterTypeConverter_0=Zeitreihen Parametertyp Konvertierer
-TimeseriesParameterTypeConverter_1=Konvertierungsindex ist leer. Keine Konvertierung von n\u00F6ten.
+TimeseriesParameterTypeConverter_1=Konvertierungsindex ist leer. Keine Konvertierung notwendig.
 TimeseriesParameterTypeConverter_2=Konvertiere Zeitreihen Parametertypen
 TimeseriesParameterTypeConverter_3=Konvertiere Zeitreihen des Parametertyps '%s'
 TimeseriesReferencesUpdater_0=Aktualisiere Zeitreihen-Verweise
