--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -713,7 +713,7 @@ TimeseriesImportWizard_2=Quelle\: %s
 TimeseriesImportWizard_3=Zeitreihen-Import
 TimeseriesImportWizard_4=Zeitreihen-Import
 TimeseriesImporter.0=Zeitreihen-Import\: %s
-TimeseriesImporter.1=
+TimeseriesImporter.1=Import abgebrochen - Zeitreihe enth\u00E4lt keine Werte.
 TimeseriesImporter_0=Fehler beim Lesen der stations.gml
 TimeseriesImporter_1=Fehler beim Lesen der stations.gml
 TimeseriesImporter_10=Erzeugt durch Projektkonvertierung
