Fixed: missing german translation

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -713,7 +713,7 @@ TimeseriesImportWizard_2=Source\: %s
 TimeseriesImportWizard_3=Timeseries import
 TimeseriesImportWizard_4=Timeseries import
 TimeseriesImporter.0=Timeseries Import\: %s
-TimeseriesImporter.1=Import abgebrochen - Zeitreihe enth\u00E4lt keine Werte.
+TimeseriesImporter.1=Empty timeseries- import aborted
 TimeseriesImporter_0=Failed to read stations.gml
 TimeseriesImporter_1=Failed to read stations.gml
 TimeseriesImporter_10=Created by project conversion
