Fixed: renamed old calculation result from project conversion.

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -26,7 +26,7 @@ BasicModelConverter.9=Anpassen der Zeitreihenreferenzen
 BasicModelConverter_1=\u00DCbernahme Basisdaten
 BasicModelConverter_2=Projekt enth\u00E4lt keine Datei f\u00FCr die synthetischen Niederschl\u00E4ge. Es wird die Standardvorlage verwendet.
 BasicModelConverter_4=Verzeichnis '%s' fehlt in Projekt.
-CalcCaseConverter.0=Aktuell_Original
+CalcCaseConverter.0=Ergebnisse_vor_Altprojektkonvertierung
 CalcCaseConverter.1=Vorhandene Ergebnisse ('%s') wurden nach '%s' umbenannt.
 CalcCaseConverter.10=Fehler beim Hinzuf\u00FCgen eines Eintrags in die globale Simulationstabelle
 CalcCaseConverter.12=Konvertiere Rechenvariante '%s'
